@@ -4,10 +4,18 @@ ADMIN_USER = "foo"
 ADMIN_PASSWORD = "bar"
 
 ## RDF
-RDF_TITLE = "donrails - recent articles"
-RDF_DESCRIPTION = "donrails. Latest 10 aricles."
-RDF_COPYRIGHT = "Copyright 2005, ARAKI Yasuhiro"
-RDF_MANAGINGEDITOR = "yasu-donrails@araki.net (ARAKI Yasuhiro)"
-RDF_WEBMASTER = "yasu-donrails@araki.net (ARAKI Yasuhiro)"
+RDF_TITLE = "My blog with donrails"
+RDF_DESCRIPTION = "Latest 10 aricles."
+RDF_COPYRIGHT = "Copyright 2006, User name"
+RDF_MANAGINGEDITOR = "my@mail.address (YOUR NAME)"
+RDF_WEBMASTER = "my@mail.address (YOUR NAME)"
+
+BASEURL = 'http://donrails.your.domain/notes/'
 
 $KCODE = 'u'
+
+ADMIN_MAILADD = 'your@mail.address'
+
+IP_RBL = [ 'niku.2ch.net', 'opm.blitzed.us', 'bsb.empty.us' ]
+HOST_RBL = [ 'rbl.bulkfeeds.jp', 'sc.surbl.org', 'bsb.empty.us' ]
+URL_LIMIT = 5
